FIX: make spectrum box colour printable in Chrome. see http://stackoverflow.com/a/14784655/641293 and http://stackoverflow.com/a/16976494/641293

--- a/spectrum.css
+++ b/spectrum.css
@@ -487,6 +487,10 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     top:0;left:0;bottom:0;right:0;
 }
 
+.sp-preview-inner {
+    -webkit-print-color-adjust: exact;
+}
+
 .sp-palette .sp-thumb-inner {
     background-position: 50% 50%;
     background-repeat: no-repeat;
